--- a/referencias.bib
+++ b/referencias.bib
@@ -1,19 +1,42 @@
 % This file was created with JabRef 2.10b2.
 % Encoding: UTF-8
-@misc{ElizabethSchreierGoogleMaps,
-  Title                   = {Allstate: Helping agents build better relationships with customers},
-  Author                  = {Elizabeth Schreier},
-  Year                    = {2019},
-  Url                     = {https://cloud.google.com/maps-platform/},
-  Urlaccessdate           = {01 de maio de 2019}
-}
-
 @misc{MotoboyVeja,
   Title                   = {Motoboy, uma palavra brasileira},
   Author                  = {S{\'e}rgio Rodrigues},
   Year                    = {2017},
   Url                     =  {https://veja.abril.com.br/blog/sobre-palavras/motoboy-uma-palavra-brasileira/},
   Urlaccessdate           = {01 de maio de 2019}
+}
+
+@Article{comparisonLaravel,
+  Title                    = {Comparison of Procedural PHP with Codeigniter and Laravel Framework},
+  Author                   = {Ripunjit Das and Dr.Lakshmi Prasad Saikia},
+  Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
+  Year                     = {2016},
+}
+
+@misc{laravel,
+  Title                   = {Laravel},
+  Author                  = {Laravel},
+  Year                    = {2019},
+  Url                     = {https://laravel.com/},
+  Urlaccessdate           = {01 de setembro de 2019}
+}
+
+@misc{locaweb:laravel,
+  Title                   = {Frameworks PHP: conheça o Laravel},
+  Author                  = {Locaweb},
+  Year                    = {2019},
+  Url                     = {http://blog.locaweb.com.br/artigos/frameworks-php-conheca-o-laravel/},
+  Urlaccessdate           = {01 de setembro de 2019}
+}
+
+@misc{portalgsti:laravel,
+  Title                   = {O que é Laravel?},
+  Author                  = {Portal GSTI},
+  Year                    = {2019},
+  Url                     = {https://www.portalgsti.com.br/laravel/},
+  Urlaccessdate           = {01 de setembro de 2019}
 }
 
 @misc{google:2019,
