--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -21,6 +21,7 @@
     \item[MVC] \textit{Model-View-Controller}
     \item[ORM] \textit{Object Relational Mapper}
     \item[PHP] \textit{Personal Home Page}
+    \item[PSR] \textit{PHP Standard Recommendation}
     \item[TTFF] Tempo de Localização Inicial
 \end{siglas}
 
