--- a/text-elements/textuais/desenvolvimento/tecnologias.tex
+++ b/text-elements/textuais/desenvolvimento/tecnologias.tex
@@ -21,7 +21,7 @@ Compatibilidade com navegadores em dispositivos móveis:
     \item Opera Mobile 10.1 +;
     \item Symbian (S60 3rd e 5 ª geração);
     \item Blackberry OS 6;
-    \item Maemo;
+    \item Maemo.
 \end{itemize}
 
 \subsection{Fontes de geolocalização}
