--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -10,11 +10,10 @@ No cenário atual, é necessário uma otimização de rotas para estes profissio
 
 Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto até o destino com dados abrangentes e trânsito em tempo real. Oferecendo experiências personalizadas e ágeis que levam o mundo real até os usuários com mapas estáticos e dinâmicos. 
 
-\begin{citacao}
-Analisamos todos os pontos, desde os recursos de personalização e a capacidade de criar camadas até o acesso ao Street View e a manipulação do ponto de vista, e concluímos que a plataforma do Google Maps atende a todas as nossas necessidades. As alternativas não estavam no mesmo nível, então foi fácil escolher \cite{ElizabethSchreierGoogleMaps}. 
-\end{citacao}
+No segundo capítulo, são detalhadas as tecnologias utilizadas no desenvolvimento deste trabalho, como é o caso dos métodos de geolocalização disponíveis atualmente, o Sistema de Posicionamento Global Assistido (A-GPS) e o serviço de pesquisa e visualização de mapas e imagens de satélite da Terra gratuito na web Google Maps, fornecido pela Google.
 
-%%
-O presente trabalho está estruturado da seguinte maneira: a seção 2 apresenta os objetivos gerais e específicos, a sessão 3 a justificativa do projeto de pesquisa e a seção 4 o referencial teórico.
-Em seguida a seção 5 apresenta a metodologia. Por fim a seção 6 o cronograma de atividades.
-%%
+O terceiro capítulo aborda o estudo das técnicas e ferramentas que foram necessárias para construção de toda a aplicação, passando pela linguagem base, servidor independente de plataforma, \textit{frameworks}, banco de dados e servidor web utilizados.
+
+No quarto capítulo é descrito o desenvolvimento da aplicação Delivery Routes, assim como todos os passos realizados no decorrer do trabalho: captura dos dados, painel de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
+
+Por fim, no quinto capítulo são apresentadas as conclusões e as propostas para futuros trabalhos.
