--- a/uri-tcc.tex
+++ b/uri-tcc.tex
@@ -53,7 +53,7 @@
 \include{text-elements/textuais/desenvolvimento/ferramentas}
 %\include{text-elements/textuais/desenvolvimento/revisao-de-literatura}         
 \include{text-elements/textuais/desenvolvimento/desenvolvimento}
-\include{text-elements/textuais/desenvolvimento/descricao-sistema}
+%\include{text-elements/textuais/desenvolvimento/descricao-sistema}
 %\include{text-elements/textuais/desenvolvimento/resultados}                    
 %\include{text-elements/textuais/desenvolvimento/orientacoes}                   
 \include{text-elements/textuais/conclusao}
