--- a/referencias.bib
+++ b/referencias.bib
@@ -8,11 +8,24 @@
   Urlaccessdate           = {01 de maio de 2019}
 }
 
+@inproceedings{He2015/01,
+  title={Design and implementation of web based on laravel framework},
+  author={Ren Yu He},
+  year={2015/01},
+  booktitle={2014 International Conference on Computer Science and Electronic Technology (ICCSET 2014)},
+  issn={2352-538X},
+  isbn={978-94-62520-47-9},
+  url={https://doi.org/10.2991/iccset-14.2015.66},
+  doi={https://doi.org/10.2991/iccset-14.2015.66},
+  publisher={Atlantis Press}
+}
+
 @Article{comparisonLaravel,
   Title                    = {Comparison of Procedural PHP with Codeigniter and Laravel Framework},
   Author                   = {Ripunjit Das and Dr.Lakshmi Prasad Saikia},
   Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
   Year                     = {2016},
+  url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
 }
 
 @misc{laravel,
@@ -89,15 +102,5 @@
   Title                   = {Mashup Mania with Google Maps},
   Author                  = {Geospatial},
   Year                    = {2009},
-  %Url                     = {https://geochalkboard.files.wordpress.com/2009/01/google-maps-pdf-article-v51.pdf},
-  %Urlaccessdate           = {09 de maio de 2019}
-}
-
-%-------------------------------
-@misc{,
-  Title                   = {},
-  Author                  = {},
-  Year                    = {},
-  Url                     = {},
-  Urlaccessdate           = {01 de junho de 2019}
+  Url                     = {https://geochalkboard.files.wordpress.com/2009/01/google-maps-pdf-article-v51.pdf},
 }
