--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -2,18 +2,33 @@
 
 \chapter{INTRODUÇÃO}
 
-Atualmente existem aplicações cruciais para facilitar a organização que um dia corrido necessita, como: lista de tarefas para você se lembrar de coisas que não podem ser esquecidas, GPS inteligente para guiar você sempre pelos melhores caminhos em sua cidade e previsão do tempo para nunca mais ser pego de surpresa na rua, são algumas funções de grande auxílio na vida de qualquer um. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido.
+%%% Original: Atualmente existem aplicações cruciais para facilitar a organização que um dia corrido necessita, como: lista de tarefas para você se lembrar de coisas que não podem ser esquecidas, GPS inteligente para guiar você sempre pelos melhores caminhos em sua cidade e previsão do tempo para nunca mais ser pego de surpresa na rua, são algumas funções de grande auxílio na vida de qualquer um. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido.
 
-Locomoção é uma grande preocupação para quem vive em grandes centros urbanos. Utilizar o carro nem sempre é uma experiência agradável, afinal, não é nada difícil encontrar congestionamentos, principalmente quando é necessário atravessar a cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
+%%% Rev-Madalozzo: No final do parágrafo você fala que o princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido... daonde veio esta informação???? Seria bom referenciar quem chegou nesta conclusão!
+O cotidiano do mundo moderno faz com que algumas aplicações virtuais sejam cruciais para facilitar a organização de um indivíduo, tais como: \textit{i}) lista de tarefas para o usuário lembre de atividades que não podem ser esquecidas; \textit{ii}) GPS inteligente para guiar o usuário; e \textit{iii}) previsão do tempo, para que o usuário não seja pego de surpresa. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido.
 
-No cenário atual, é necessário uma otimização de rotas para estes profissionais da área de transportes que estão suscetíveis a perda de tempo caso não analisadas coerentemente por alguém capacitado. Um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários.
+%%% Original: Locomoção é uma grande preocupação para quem vive em grandes centros urbanos. Utilizar o carro nem sempre é uma experiência agradável, afinal, não é nada difícil encontrar congestionamentos, principalmente quando é necessário atravessar a cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
 
-Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto até o destino com dados abrangentes e trânsito em tempo real. Oferecendo experiências personalizadas e ágeis que levam o mundo real até os usuários com mapas estáticos e dinâmicos. 
+%%% Rev-Madalozzo: No final do parágrafo você inicia a frase falando "É por esse motivo...." - leia a frase, não fica entendido o que "É por esse motivo" que você está querendo falar. É uma frase com causa mas sem efeito.
+Locomoção é uma grande preocupação para quem vive em grandes centros urbanos, ou até mesmo para usuários que visitam cidades com caminhos desconhecidos. Utilizar o carro nem sempre é a melhor decisão ou uma experiência agradável, afinal, congestionamentos já fazem parte do cotidiano do brasileiro, principalmente quando é necessário percorrer um longo caminho na cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
 
-No segundo capítulo, são detalhadas as tecnologias utilizadas no desenvolvimento deste trabalho, como é o caso dos métodos de geolocalização disponíveis atualmente, o Sistema de Posicionamento Global Assistido (A-GPS) e o serviço de pesquisa e visualização de mapas e imagens de satélite da Terra gratuito na web Google Maps, fornecido pela Google.
+%%% Original: No cenário atual, é necessário uma otimização de rotas para estes profissionais da área de transportes que estão suscetíveis a perda de tempo caso não analisadas coerentemente por alguém capacitado. Um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários.
 
-O terceiro capítulo aborda o estudo das técnicas e ferramentas que foram necessárias para construção de toda a aplicação, passando pela linguagem base, servidor independente de plataforma, \textit{frameworks}, banco de dados e servidor web utilizados.
+%%% Rev-Madalozzo: A primeira frase deste parágrafo também é uma frase sem causa e efeito. Você comenta que é necessária a otimização (causa) mas não efeito o porque é necessária (efeito). Ajustei.
+No cenário urbano atual, é necessário um algoritmo para otimização de rotas para que os profissionais da área de transportes não fiquem suscetíveis a perder seu tempo em rotas mal analisadas. Considerando esta situação, o desenvolvimento de um aplicativo móvel conectado a \textit{Google Maps Platform}, proporcionando uma solução significativa na economia de tempo para os usuários, se tornaria uma solução capaz de resolver tal problema.
 
-No quarto capítulo é descrito o desenvolvimento da aplicação Delivery Routes, assim como todos os passos realizados no decorrer do trabalho: captura dos dados, painel de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
+%%% Original: Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto até o destino com dados abrangentes e trânsito em tempo real. Oferecendo experiências personalizadas e ágeis que levam o mundo real até os usuários com mapas estáticos e dinâmicos. 
 
-Por fim, no quinto capítulo são apresentadas as conclusões e as propostas para futuros trabalhos.
+Utilizando a \textit{Google Maps Platform}, é possível encontrar o melhor trajeto de um ponto inicial até um ponto destino com dados abrangentes e, também, com dados do trânsito em tempo real. Desta maneira, oferecendo experiências personalizadas e ágeis capazes de tornar o mundo real em virtual, entregando aos usuários mapas estáticos e dinâmicos. 
+
+%%% Original: No segundo capítulo, são detalhadas as tecnologias utilizadas no desenvolvimento deste trabalho, como é o caso dos métodos de geolocalização disponíveis atualmente, o Sistema de Posicionamento Global Assistido (A-GPS) e o serviço de pesquisa e visualização de mapas e imagens de satélite da Terra gratuito na web Google Maps, fornecido pela Google.
+
+%%% Rev-Madalozzo: Sempre usar iniciais em Maiúscuclas nas seguintes palavras: Capítulo, Seção, Tabela, Figura, Autor.
+No segundo Capítulo, são detalhadas as tecnologias utilizadas para o desenvolvimento do presente trabalho, tais como: métodos de geolocalização disponíveis atualmente; Sistema de Posicionamento Global Assistido (A-GPS); serviço de pesquisa e visualização de mapas e imagens de satélite do Planeta Terra, este gratuito via internet, através do Google Maps.
+
+O terceiro Capítulo aborda o estudo das técnicas e das ferramentas que foram necessárias para a construção da aplicação, passando pela linguagem base, servidor independente de plataforma, \textit{frameworks}, banco de dados e servidor web utilizados.
+
+%%% Original: No quarto capítulo é descrito o desenvolvimento da aplicação Delivery Routes, assim como todos os passos realizados no decorrer do trabalho: captura dos dados, painel de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
+No quarto Capítulo é descrito o desenvolvimento da aplicação, denominada Delivery Routes. Também, é descrito todos os passos realizados no decorrer do trabalho, tais como: captura dos dados, painel de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
+
+Por fim, no quinto Capítulo são apresentadas as conclusões e as propostas para futuros trabalhos.
