--- a/referencias.bib
+++ b/referencias.bib
@@ -8,6 +8,13 @@
   Urlaccessdate           = {01 de maio de 2019}
 }
 
+@Book{jaroslavapi,
+  Title                    = {Practical API Desig},
+  Author                   = {Jaroslav Tulach},
+  Year                    = {2008},
+  Publisher                = {Editora Apress}
+}
+
 @inproceedings{He2015/01,
   title={Design and implementation of web based on laravel framework},
   author={Ren Yu He},
@@ -21,11 +28,45 @@
 }
 
 @Article{comparisonLaravel,
+  Title                    = {DESENVOLVIMENTO DE APLICAÇÕES WEB E DISPOSITIVOS MÓVEIS UTILIZANDO FRAMEWORKS},
+  Author                   = {Ripunjit Das and Dr.Lakshmi Prasad Saikia},
+  Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
+  Year                     = {2016},
+  url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
+}
+
+
+%https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&ved=2ahUKEwiI3uzh9M7kAhXTKrkGHT2nBgcQFjABegQIAxAC&url=http%3A%2F%2Frevistapensar.com.br%2Ftecnologia%2Fpasta_upload%2Fartigos%2Fa147.pdf&usg=AOvVaw056AquBC_nDiAR9IDjYeEc
+@Article{desenvWebFrame,
+  Title                    = {DESENVOLVIMENTO DE APLICAÇÕES WEB E DISPOSITIVOS MÓVEIS UTILIZANDO FRAMEWORKS},
+  Author                   = {Carlos Henrique Gonçalves Dias, Wisney Almeida Amorim, Nelson Ribeiro de Carvalho Júnior},
+  Year                     = {2014}
+}
+
+@Article{comparisonLaravel,
   Title                    = {Comparison of Procedural PHP with Codeigniter and Laravel Framework},
   Author                   = {Ripunjit Das and Dr.Lakshmi Prasad Saikia},
   Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
   Year                     = {2016},
   url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
+}
+
+
+@misc{redhat,
+  Title                   = {O que é uma API?},
+  Author                  = {Red Hat},
+  Year                    = {2019},
+  Url                     = {https://www.redhat.com/pt-br/topics/api/what-are-application-programming-interfaces},
+  Urlaccessdate           = {07 de setembro de 2019}
+}
+
+
+@misc{api:w3c,
+  Title                   = {W3C},
+  Author                  = {W3C},
+  Year                    = {2019},
+  Url                     = {http://www.w3c.br/Padroes/},
+  Urlaccessdate           = {07 de setembro de 2019}
 }
 
 @misc{laravel,
