--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -23,6 +23,7 @@
     \item[PHP] \textit{Personal Home Page}
     \item[PSR] \textit{PHP Standard Recommendation}
     \item[TTFF] Tempo de Localização Inicial
+    \item[W3C] World Wide Web Consortium
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
