--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -5,7 +5,7 @@
 %%% Original: Atualmente existem aplicações cruciais para facilitar a organização que um dia corrido necessita, como: lista de tarefas para você se lembrar de coisas que não podem ser esquecidas, GPS inteligente para guiar você sempre pelos melhores caminhos em sua cidade e previsão do tempo para nunca mais ser pego de surpresa na rua, são algumas funções de grande auxílio na vida de qualquer um. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido.
 
 %%% Rev-Madalozzo: No final do parágrafo você fala que o princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido... daonde veio esta informação???? Seria bom referenciar quem chegou nesta conclusão!
-O cotidiano do mundo moderno faz com que algumas aplicações virtuais sejam cruciais para facilitar a organização de um indivíduo, tais como: \textit{i}) lista de tarefas para o usuário lembre de atividades que não podem ser esquecidas; \textit{ii}) GPS inteligente para guiar o usuário; e \textit{iii}) previsão do tempo, para que o usuário não seja pego de surpresa. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido.
+O cotidiano do mundo moderno faz com que algumas aplicações virtuais sejam cruciais para facilitar a organização de um indivíduo, tais como: \textit{i}) lista de tarefas para o usuário lembre de atividades que não podem ser esquecidas; \textit{ii}) GPS inteligente para guiar o usuário; e \textit{iii}) pagar uma conta, para que o usuário não seja pego de surpresa. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido \cite{desenvWebFrame}.
 
 %%% Original: Locomoção é uma grande preocupação para quem vive em grandes centros urbanos. Utilizar o carro nem sempre é uma experiência agradável, afinal, não é nada difícil encontrar congestionamentos, principalmente quando é necessário atravessar a cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
 
