--- a/text-elements/textuais/desenvolvimento/tecnologias.tex
+++ b/text-elements/textuais/desenvolvimento/tecnologias.tex
@@ -5,7 +5,22 @@
 %%% Original: Neste capítulo estão descritas as tecnologias aplicadas no decorrer do trabalho.
 Este Capítulo descreve as tecnologias necessárias para o desenvolvimento deste trabalho.
 
-\section{API W3C}
+\section{API}
+%https://www.devmedia.com.br/application-programming-interface-desenvolvendo-apis-de-software/30548
+API é o acrônimo de Interface de Programação de Aplicativos. Na grande maioria das vezes uma API se comunica com diversos outros códigos interligando diversas funções em um aplicativo, como pode ser visto na \autoref{fig:api}. Esta interface de programação é um conjunto de padrões de programação que permitem a construção de aplicativos e a sua utilização. Portanto, uma API é uma abstração da funcionalidade e da implementação interna de cada componente. Com uma API é possível criar sistemas melhores e minimizar o entendimento de todos os detalhes de um componente e assim serve como um “alicerce”, abstraindo a funcionalidade e implementação interna de cada componente \cite{jaroslavapi}.
+
+Segundo \citeonline{jaroslavapi}, API é um conjunto de classes, seus métodos e seus campos.
+Uma boa API é o conjunto de arquivos que o aplicativo lê ou escreve, bem como seu formato. Algumas aplicações sequer fazem uso do disco rígido, assim sendo não precisam se preocupar com esse tipo de coisa. O primeiro objetivo da engenharia é produzir sistemas funcionais. Uma API também precisa ser fácil de usar, largamente adotada e produtiva.
+
+\begin{figure}[H]
+    \centering
+    \caption{API -  Estrutura}
+    \includegraphics[width=0.8\textwidth]{./dados/figuras/fig10}
+    \fonte{\citeonline{redhat}}
+    \label{fig:api}
+\end{figure}
+
+O World Wide Web Consortium (W3C) é a principal organização de padronização da rede mundial de computadores, desenvolvendo especificações técnicas e orientações através de um processo projetado para maximizar a consenso sobre as recomendações, garantindo qualidades técnicas e editoriais, por meio do desenvolvimento de protocolos comuns e fóruns abertos que promovam a sua evolução e assegurem a sua interoperabilidade, para levar a web ao seu potencial máximo \cite{api:w3c}.
 
 \section{Geolocalização}
 
@@ -42,7 +57,7 @@ Para obter a localização do usuário pode-se utilizar diferentes fontes, tendo
 %%% Original: Os dois métodos retornam imediatamente, e depois de forma assíncrona tentam obter a localização atual. Eles carregam o mesmo número de argumentos, dois deles são opcionais: um \textit{callback} quando retornar corretamente, um \textit{callback} se ocorrer erro, e um objeto \textit{PositionOptions}, que terão as seguintes opções:
 
 %%% Rev-Madalozzo: O que você quis dizer sobre o termo "forma assíncrona"?
-Estes são os possíveis métodos para identificar a posição de um objeto ou usuário. Os dois métodos retornam dados de forma imediata e, depois de forma assíncrona, tentam obter a localização atual. Eles carregam o mesmo número de argumentos, dois deles são opcionais: um \textit{callback} para quando retornar corretamente o dado, um \textit{callback} para se caso ocorra algum tipo de erro, e um objeto \textit{PositionOptions} que apresenta as seguintes opções:
+Segundo \citeonline{geolocalizacao:2011}, estes são os possíveis métodos para identificar a posição de um objeto ou usuário. Os dois métodos retornam dados de forma imediata e, depois de forma assíncrona, tentam obter a localização atual. Eles carregam o mesmo número de argumentos, dois deles são opcionais: um \textit{callback} para quando retornar corretamente o dado, um \textit{callback} para se caso ocorra algum tipo de erro, e um objeto \textit{PositionOptions} que apresenta as seguintes opções:
 
 \begin{itemize}
 %%% Original: \item enableHighAccuracy: indica se deseja receber os resultados mais precisos, podem ter respostas mais lentes, ele recebe um valor \textit{boolean};
@@ -97,9 +112,9 @@ Inicialmente o GPS realiza uma busca por satélites disponíveis para auxiliá-l
 
 %%% Original: Para dispositivos A-GPS, são utilizados servidores, como por exemplo uma torre de redes móvel (antenas de celulares) e bases (servidores) para obter as informações dos satélites constantemente. Uma vez que esses servidores estão continuamente enviando e recebendo informações dos satélites, não há atraso em demorar a conhecer a órbita e a localização exata dos satélites, o tempo para o recebimento dos dados é muito mais rápido que um GPS normal, já que os dados já estão armazenados nos servidores, que analisam os sinais fragmentados recebidos do receptor GPS e aqueles recebidos diretamente do satélite para corrigir erros, proporcionando uma localização exata do aparelho, onde o mesmo só precisará realizar alguns cálculos de triangulação com as antenas de redes móveis por final.
 
-Para dispositivos A-GPS, são utilizados servidores, como por exemplo uma torre de rede móvel (antenas de celulares) e bases (servidores) para obter as informações dos satélites constantemente. Uma vez que esses servidores estão continuamente enviando e recebendo informações dos satélites, não há atraso para conhecer a órbita e a localização exata dos satélites. O tempo para o recebimento dos dados é muito mais rápido que um GPS normal, já que os dados já estão armazenados nos servidores, que analisam os sinais fragmentados recebidos do receptor GPS e aqueles recebidos diretamente do satélite para corrigir erros, proporcionando uma localização exata do aparelho, onde o mesmo só precisará realizar alguns cálculos de triangulação com as antenas de redes móveis por final.
+Para dispositivos A-GPS, são utilizados servidores, como por exemplo uma torre de rede móvel (antenas de celulares) e bases (servidores) para obter as informações dos satélites constantemente. Uma vez que esses servidores estão continuamente enviando e recebendo informações dos satélites, não há atraso para conhecer a órbita e a localização exata dos satélites. O tempo para o recebimento dos dados é muito mais rápido que um GPS normal, já que os dados já estão armazenados nos servidores, que analisam os sinais fragmentados recebidos do receptor GPS e aqueles recebidos diretamente do satélite para corrigir erros, proporcionando uma localização exata do aparelho, onde o mesmo só precisará realizar alguns cálculos de triangulação com as antenas de redes móveis por final \cite{oficinanetagps:2018}.
 
-A conexão inicial é feita com uma antena de telefonia celular que previamente armazenou a localização destes satélites e as transmite para o aparelho com uma velocidade até 40 vezes maior. Este recurso só é possível em aparelhos com conexão GPRS, caso este sinal esteja devido à regiões cercadas por edifícios muito altos, o A-GPS utiliza o apoio da antena quando o sinal GPS, ajudando a manter o sinal estável. Não existindo cobertura de celular, o aparelho funcionará normalmente como um GPS convencional. Segundo a descrição da \citeonline{oficinanetagps:2018}, o uso do A-GPS se torna a utilização mais eficaz, evitando o aguardo pela conexão entre satélites. Na \autoref{fig:figura-localizacaoGpsAgps} é possível visualizar como é feita a localização GPS e A-GPS.
+Ainda conforme o autor citado acima, a conexão inicial é feita com uma antena de telefonia celular que previamente armazenou a localização destes satélites e as transmite para o aparelho com uma velocidade até 40 vezes maior. Este recurso só é possível em aparelhos com conexão GPRS, caso este sinal esteja devido à regiões cercadas por edifícios muito altos, o A-GPS utiliza o apoio da antena quando o sinal GPS, ajudando a manter o sinal estável. Não existindo cobertura de celular, o aparelho funcionará normalmente como um GPS convencional. O uso do A-GPS se torna a utilização mais eficaz, evitando o aguardo pela conexão entre satélites. Na \autoref{fig:figura-localizacaoGpsAgps} é possível visualizar como é feita a localização GPS e A-GPS.
 
 \begin{figure}[H]
     \centering
