--- a/referencias.bib
+++ b/referencias.bib
@@ -1,11 +1,28 @@
 % This file was created with JabRef 2.10b2.
 % Encoding: UTF-8
+@book{pressman2009engenharia,
+  title={Engenharia de Software - 7.ed.},
+  author={Pressman, R.S.},
+  isbn={9788580550443},
+  url={https://books.google.com.br/books?id=y0rH9wuXe68C},
+  year={2009},
+  publisher={McGraw Hill Brasil}
+}
+
 @misc{MotoboyVeja,
   Title                   = {Motoboy, uma palavra brasileira},
   Author                  = {S{\'e}rgio Rodrigues},
   Year                    = {2017},
   Url                     =  {https://veja.abril.com.br/blog/sobre-palavras/motoboy-uma-palavra-brasileira/},
   Urlaccessdate           = {01 de maio de 2019}
+}
+
+
+@Book{rest:roy,
+  Title                    = {Architectural Styles and the Design of Network-based Software Architectures},
+  Author                   = {Roy Thomas Fielding},
+  Year                     = {2000},
+  Address                  = {UNIVERSITY OF CALIFORNIA, IRVINE}
 }
 
 @Book{jaroslavapi,
@@ -28,17 +45,16 @@
 }
 
 @Article{comparisonLaravel,
-  Title                    = {DESENVOLVIMENTO DE APLICAÇÕES WEB E DISPOSITIVOS MÓVEIS UTILIZANDO FRAMEWORKS},
+  Title                    = {Comparison of Procedural PHP with Codeigniter and Laravel Framework},
   Author                   = {Ripunjit Das and Dr.Lakshmi Prasad Saikia},
   Journal                  = {International Journal of Current Trends in Engineering & Research (IJCTER)},
   Year                     = {2016},
   url={https://www.ijcter.com/papers/volume-2/issue-6/comparison-of-procedural-php-with-codeigniter-and-laravel-framework.pdf}
 }
 
-
 %https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&ved=2ahUKEwiI3uzh9M7kAhXTKrkGHT2nBgcQFjABegQIAxAC&url=http%3A%2F%2Frevistapensar.com.br%2Ftecnologia%2Fpasta_upload%2Fartigos%2Fa147.pdf&usg=AOvVaw056AquBC_nDiAR9IDjYeEc
 @Article{desenvWebFrame,
-  Title                    = {DESENVOLVIMENTO DE APLICAÇÕES WEB E DISPOSITIVOS MÓVEIS UTILIZANDO FRAMEWORKS},
+  Title                    = {Desenvolvimento de aplicações web e dispositivos móveis utilizando frameworks},
   Author                   = {Carlos Henrique Gonçalves Dias, Wisney Almeida Amorim, Nelson Ribeiro de Carvalho Júnior},
   Year                     = {2014}
 }
