--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -18,12 +18,18 @@
     \item[JS] \textit{JavaScript}
     \item[JSON] \textit{JavaScript Object Notation}
     \item[LTI] \textit{Long Term Support}
+    \item[MTI] Instituto de Tecnologia de Massachusetts
     \item[MVC] \textit{Model-View-Controller}
     \item[ORM] \textit{Object Relational Mapper}
     \item[PHP] \textit{Personal Home Page}
     \item[PSR] \textit{PHP Standard Recommendation}
+    \item[QR] \textit{Quick Response}
+    \item[REST] \textit{Representational State Transfer}
+    \item[SOAP] \textit{Simple Object Access Protocol}
     \item[TTFF] Tempo de Localização Inicial
-    \item[W3C] World Wide Web Consortium
+    \item[URI] \textit{Uniform Resource Identifier}
+    \item[W3C] \textit{World Wide Web Consortium}
+    \item[XML] \textit{Extensible Markup Language}
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
